Atualizações no sistema: cache, layout, e novas páginas

--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
     <div class="container">
         <header>
-            <h1>Acorde Certo</h1>
-            <img src="logo-acordecerto.png" alt="Logo Acorde Certo">
+            <!-- Menu de navegação -->
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Calculadora</a></li>
+                    <li><a href="dicas.html">Dicas</a></li>
+                    <li><a href="pesquisas.html">Pesquisas</a></li>
+                </ul>
+            </nav>
+            <div class="header-content">
+                <h1>Acorde Certo</h1>
+                <img src="logo-acordecerto.png" alt="Logo Acorde Certo">
+            </div>
         </header>
+
         <p>Descubra os melhores horários para acordar e maximizar seu descanso.</p>
 
         <main>
@@ -64,7 +75,7 @@
                 <p>É importante acordar ao final de um ciclo para evitar a sensação de cansaço. Essa calculadora te ajuda a determinar os melhores horários para despertar, garantindo que você acorde no final de um ciclo completo e se sinta mais descansado.</p>
             </section>
         </main>
-
+        
         <footer>
             <p>&copy; 2024 Acorde Certo. Todos os direitos reservados.</p>
         </footer>
