--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acorde Certo</title>
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
             </nav>
             <div class="header-content">
                 <h1>Acorde Certo</h1>
-                <img src="logo-acordecerto.png" alt="Logo Acorde Certo">
+                <img src="assets/images/logo-acordecerto.png" alt="Logo Acorde Certo">
             </div>
         </header>
 
