Adiciona suporte para ícones iOS e Android, além de manifest.json

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acorde Certo</title>
+    <!-- Cor da barra de status no Android -->
+    <meta name="theme-color" content="#333333">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="assets/manifest.json">
     <link rel="stylesheet" href="style.css">
+    <title>Acorde Certo</title>
 </head>
 <body>
     <div class="container">
