--- a/pesquisas.html
+++ b/pesquisas.html
@@ -11,7 +11,8 @@
         <!-- Menu de navegação -->
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Calculadora</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="calculadora.html">Calculadora</a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="pesquisas.html">Pesquisas</a></li>
             </ul>
